# Sales_Voice_Bot

./: .env  main.py  pyproject.toml  test.html  test.py
routes/: products.py  websocket.py
utils/: ASR.py
